RESOLVED FIXED37088
Fix some "explicit braces to avoid ambiguous 'else'" warnings
https://bugs.webkit.org/show_bug.cgi?id=37088
Summary Fix some "explicit braces to avoid ambiguous 'else'" warnings
Antonio Gomes
Reported 2010-04-05 08:42:52 PDT
it'd be good shut up some compiler warnings. ./../../../WebCore/dom/Node.cpp: In member function 'bool WebCore::Node::dispatchGenericEvent(WTF::PassRefPtr<WebCore::Event>)': ../../../../WebCore/dom/Node.cpp:2614: warning: suggest explicit braces to avoid ambiguous 'else' uninitialized in this function (...) ../../../../WebCore/page/DOMWindow.cpp: In member function 'bool WebCore::DOMWindow::dispatchEvent(WTF::PassRefPtr<WebCore::Event>, WTF::PassRefPtr<WebCore::EventTarget>)': ../../../../WebCore/page/DOMWindow.cpp:1437: warning: suggest explicit braces to avoid ambiguous 'else' ../../../../WebCore/platform/UUID.cpp: In function 'WebCore::String WebCore::createCanonicalUUIDString()':
Attachments
(committed in r57077) patch (2.72 KB, patch)
2010-04-05 08:45 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2010-04-05 08:45:12 PDT
Created attachment 52536 [details] (committed in r57077) patch
Darin Adler
Comment 2 2010-04-05 08:45:51 PDT
Comment on attachment 52536 [details] (committed in r57077) patch These are braces, not parentheses. I'm happy that the compiler warnings happen to match our coding style.
Antonio Gomes
Comment 3 2010-04-05 08:48:38 PDT
thx darin! i will fix ChangeLog before landing
Note You need to log in before you can comment on or make changes to this bug.