Fix some "explicit braces to avoid ambiguous 'else'" warnings https://bugs.webkit.org/show_bug.cgi?id=37088

Reviewed by Darin Adler.
Patch by Antonio Gomes (tonikitoo@webkit.org)

* dom/Node.cpp:
(WebCore::Node::dispatchGenericEvent):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::dispatchEvent):

Canonical link: https://commits.webkit.org/48370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57077 268f45cc-cd09-0410-ab3c-d52691b4dbfc