WebCore/dom/Node.cpp
@@ -2611,11 +2611,12 @@ bool Node::dispatchGenericEvent(PassRefPtr<Event> prpEvent)
 
 #if ENABLE(INSPECTOR)
     Page* inspectedPage = InspectorTimelineAgent::instanceCount() ? document()->page() : 0;
-    if (inspectedPage)
+    if (inspectedPage) {
         if (InspectorTimelineAgent* timelineAgent = eventHasListeners(event->type(), targetForWindowEvents, this, ancestors) ? inspectedPage->inspectorTimelineAgent() : 0)
             timelineAgent->willDispatchEvent(*event);
         else
             inspectedPage = 0;
+    }
 #endif
 
     // Give the target node a chance to do some work before DOM event handlers get a crack.
